--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,10 +8,10 @@ body {
 }
 .navbar {
     display: flex;
+    flex-direction: row;
     background-color: black;
     height: 70px;
     width: 100%;
-
     justify-content: space-between;
 }
 
