--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -30,7 +30,7 @@
     color: rgba(255, 255, 255, 0.69);
     line-height: 1.2;
     text-decoration: none;
-    font-weight: 900;
+    font-weight: 600;
 }
 
 A:link { 
@@ -71,12 +71,12 @@ A:active {
     max-width: 520px;
 }
 .signap {
-    background-color: #ffffff;
     width: 360px;
     max-block-size: 100%;
     height: 362px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+    margin-top: 30px;
 }
 .signap_input {
     display: flex;
@@ -139,10 +139,11 @@ A:active {
     color: #fca667;
 }
 input {
+    box-sizing: border-box;
     border: none;
     border-bottom: solid 1px rgb(189, 189, 189);
     width: 285px;
-    font-size: 14px;
+    font-size: 12px;
     padding:10px;
 }
 input::placeholder {
@@ -150,10 +151,42 @@ input::placeholder {
         font-size: 1.2em; 
 }
 div .signap_input {
+    box-sizing: border-box;
     align-items: center;
     height: 254px;
     justify-content: space-around;
+    background-color: #ffffff;
+    padding: 4px 0 32px;
 }
 
+.button_starter {
+    border: none;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    FONT-WEIGHT: 600;
+    color: rgb(255, 255, 255);
+    line-height: 1.2;
+    background: #ff9b51;
+    width: 360px;
+    height: 54px;
+    padding: 0px;
+    
+}
+.button_starter:hover { 
+    text-decoration: none;
+    background-color: #ff801f;
+    transition-duration: 0.4s;
+}
 
+/* .Name {
+    font-size: 14px;
+    font-family: "OpenSans";
+    color: rgb(189, 189, 189);
+    line-height: 1.2;
+    text-align: left;
+    position: absolute;
+    left: 941.937px;
+    top: 301.1px;
+    z-index: 188;
+  } */
   
