--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -59,7 +59,7 @@ A:active {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
-    background: no-repeat url(/assets/images/Header_Panel.png); 
+    background: no-repeat url(../images/Header_Panel.png); 
     width: auto;
     height: 711px;
     background-size: 100%;
@@ -109,7 +109,7 @@ A:active {
     FONT-WEIGHT: 600;
     color: rgb(255, 255, 255);
     line-height: 1.2;
-    background: url(./assets/images/Download\ Button\ Header.png);
+    background: url(/assets/images/Download_Button_Header.png);
     width: 135px;
     height: 42px;
     margin-top: 35px;
