--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,12 +3,14 @@
 }
 
 .navbar {
+    position: fixed;
     display: flex;
     flex-direction: row;
     background-color: black;
     height: 70px;
     width: 100%;
     justify-content: space-between;
+    /* box-shadow: 0 0 2px rgb(255, 255, 255); */
 }
 
 .navbar_img {
@@ -55,6 +57,7 @@ A:active {
 }
  
 .header {
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -63,7 +66,7 @@ A:active {
     width: auto;
     height: 711px;
     background-size: 100%;
-    padding: 150px;
+    padding: 180px 150px 0 150px;
 
 }
 .header_block {
@@ -88,10 +91,10 @@ A:active {
     color: rgb(255, 255, 255);
     line-height: 1.2;
     text-align: left;
-    margin-top: 24px;
+    margin-top: 22px;
 }
 .header_divider {
-      margin: 27px 0 27px -4px;
+      margin: 27px 0 21px -4px;
 }
 .header_text {
     font-size: 16px;
@@ -112,8 +115,9 @@ A:active {
     background: url(../images/Download_Button_Header.png);
     width: 135px;
     height: 42px;
-    margin-top: 35px;
+    margin-top: 41px;
     padding: 0;
+    outline: none;
 }
 .button_download:hover { 
     text-decoration: none;
@@ -145,6 +149,7 @@ input {
     width: 285px;
     font-size: 12px;
     padding:10px;
+    outline: none;
 }
 input::placeholder {
         color: rgb(189, 189, 189);
@@ -157,7 +162,7 @@ div .signap_input {
     justify-content: space-around;
     background-color: #ffffff;
     padding: 4px 0 32px;
-}
+    }
 
 .button_starter {
     border: none;
@@ -170,6 +175,7 @@ div .signap_input {
     width: 360px;
     height: 54px;
     padding: 0px;
+    outline: none;
     
 }
 .button_starter:hover { 
@@ -178,15 +184,34 @@ div .signap_input {
     transition-duration: 0.4s;
 }
 
-/* .Name {
+.brand_bar {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 105px;
+    padding: 18px 167px 20px 150px ;
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+}
+.brand_box1 {
+    width: 364px;
+}
+
+.brand_box1 > h2 {
+    font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
+    color: rgb(51, 51, 51);
+    font-weight: bold;
+}
+
+.brand_box1 > .brand_box_text {
     font-size: 14px;
-    font-family: "OpenSans";
-    color: rgb(189, 189, 189);
-    line-height: 1.2;
-    text-align: left;
-    position: absolute;
-    left: 941.937px;
-    top: 301.1px;
-    z-index: 188;
-  } */
+    font-family: 'Open Sans', sans-serif;
+    color: rgb(134, 135, 139);
+    line-height: 1.429;
+  }
   
+  .brand_box2 {
+      padding-top: 10px;
+  }
+ 
