--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,6 +1,7 @@
  * {
     margin: 0;
 }
+
 .navbar {                /* стили для меню навбара  */
     position: fixed;
     display: flex;
@@ -19,32 +20,33 @@
 .navbar_title {
     display: flex;
     flex-direction: row;
-    padding: 26.6px 0px 25px 0px;
+    align-self: center;
 }
-.navbar_title > * {
+.navbar_title > nav {
     margin-right: 45px;
+}
+.navbar_title nav > a {
     font-size: 14px;
     font-family: "Open Sans";
     color: rgba(255, 255, 255, 0.69);
     line-height: 1.2;
     text-decoration: none;
-    font-weight: 600;
-}
-A:link {         /* стили для кнопоко меню навбара */
+    }
+.navbar_title nav > a:link {         /* стили для кнопоко меню навбара */
     text-decoration: none;
     color: rgba(255, 255, 255, 0.69);
 } 
-A:visited { 
+.navbar_title nav > a:visited { 
     text-decoration: none;
     color: rgba(255, 255, 255, 0.69);
 } 
-A:hover {
+.navbar_title nav > a:hover {
     text-decoration: underline;
     color: rgb(255, 255, 255);
     transition: 0.4s;
     
 }
-A:active { 
+.navbar_title nav > a:active { 
     text-decoration: none;
     color: rgb(255, 0, 0);
     size: 20px;
@@ -166,12 +168,14 @@ div .signap_input {
     height: 54px;
     padding: 0px;
     outline: none;   
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 .button_starter:hover { 
     text-decoration: none;
     background-color: #ff801f;
     transition-duration: 0.4s;
-}
+    }
 .brand_bar {   /* третьи блок с иконками брендов */
     box-sizing: border-box;
     display: flex;
@@ -197,8 +201,41 @@ div .signap_input {
     line-height: 1.429;
 }
 .brand_box2 {
-      padding-top: 10px;
+    align-self: center;
 }
 .display {
       display: block;
+}
+
+.a, button, .button_starter:hover {  /* палец вверх на кнопки */
+    cursor: pointer;
+}
+
+.social_links_element {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 635px;
+    }
+
+.social_links_element a > i { 
+    display: block;
+    font-size: 48px;
+    font-family: "FontAwesome";
+    color: rgb(204, 204, 204);
+    font-style: normal;
+    line-height: 1.2;
+    text-decoration: none;
+   }
+
+.social_links_element a i:hover{
+    color: #ff801f;
+    text-decoration: none;
+    transform: scale(1.4);  
+    transition: 0.4s;
+
+    }
+a {
+    text-decoration: none;
+    
 }
