--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -209,6 +209,7 @@ div .signap_input {
 
 .a, button, .button_starter:hover {  /* палец вверх на кнопки */
     cursor: pointer;
+
 }
 
 .social_links_element {
@@ -231,11 +232,89 @@ div .signap_input {
 .social_links_element a i:hover{
     color: #ff801f;
     text-decoration: none;
-    transform: scale(1.4);  
+    transform: scale(1.2);  
     transition: 0.4s;
+    text-decoration: none;
 
-    }
+}
 a {
     text-decoration: none;
-    
 }
+.features {     /* третьи блок с текстом и 3 табами и картинкой */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #f5f5f5;
+    height: 595px;
+    justify-content: center;
+    align-items: center;
+    /* padding: 147px 145px 115px 150px; */
+    }
+
+.box,.first {
+    display: flex;
+    flex-direction: row;
+    /* width: 685px; */
+    height: 334px;
+    padding: 0px;
+    }
+.control {
+    display: flex;
+    width: 112px;
+    height: 112px;
+    align-items: center;
+    justify-content: center;
+    background-color: #333333;
+    color: #ffffff;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    line-height: 1.333;
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.5);
+    margin: 1px;
+}
+.container {       
+    margin: 0px 100px 0 100px;
+    width: 474px;
+}
+.container .title p {
+    font-size: 20px; 
+    font-family: 'Open Sans', sans-serif;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    line-height: 1.2;
+    margin-bottom: 50px;
+    margin-top: 10px;
+}
+.container .text p {
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    color: rgb(134, 135, 139);
+    line-height: 1.429;
+    margin-bottom: 30px;
+    text-align: justify;
+}
+.button_download_features {    /* кнопка скачать в 3 блоке */
+    border: none;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    FONT-WEIGHT: 600;
+    color: rgb(255, 255, 255);
+    line-height: 1.2;
+    background: #ff8b38;
+    width: 121px;
+    height: 46px;
+    padding: 0px;
+    outline: none;   
+    border-radius: 4px;
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.5);
+}
+
+.button_download_features:hover {
+    background-color:#ff8126;
+}
+
+.tab_1:hover, .tab_2:hover, .tab_3:hover {
+    background-color: #ff8b38;
+}
+
