--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -22,10 +22,8 @@
     flex-direction: row;
     align-self: center;
 }
-.navbar_title > nav {
-    margin-right: 45px;
-}
-.navbar_title nav > a {
+
+.navbar_title a {
     font-size: 14px;
     font-family: "Open Sans";
     color: rgba(255, 255, 255, 0.69);
@@ -188,13 +186,13 @@ div .signap_input {
 .brand_box1 {
     width: 364px;
 }
-.brand_box1 > h2 {
+.brand_box1 h2 {
     font-size: 20px;
     font-family: 'Open Sans', sans-serif;
     color: rgb(51, 51, 51);
     font-weight: bold;
 }
-.brand_box1 > .brand_box_text {
+.brand_box1 .brand_box_text {
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
     color: rgb(134, 135, 139);
@@ -209,7 +207,6 @@ div .signap_input {
 
 .a, button, .button_starter:hover {  /* палец вверх на кнопки */
     cursor: pointer;
-
 }
 
 .social_links_element {
@@ -219,7 +216,7 @@ div .signap_input {
     width: 635px;
     }
 
-.social_links_element a > i { 
+.social_links_element i { 
     display: block;
     font-size: 48px;
     font-family: "FontAwesome";
@@ -229,13 +226,12 @@ div .signap_input {
     text-decoration: none;
    }
 
-.social_links_element a i:hover{
+.social_links_element i:hover{
     color: #ff801f;
     text-decoration: none;
     transform: scale(1.2);  
     transition: 0.4s;
     text-decoration: none;
-
 }
 a {
     text-decoration: none;
@@ -248,13 +244,11 @@ a {
     height: 595px;
     justify-content: center;
     align-items: center;
-    /* padding: 147px 145px 115px 150px; */
     }
 
-.features .box, .first {
+.features .first {
     display: flex;
     flex-direction: row;
-    /* width: 685px; */
     height: 334px;
     padding: 0px;
     }
@@ -273,11 +267,11 @@ a {
     box-shadow: 0px 3px 6px rgba(0,0,0,0.5);
     margin: 1px;
 }
-.features .box .container {       
+.features .container {       
     margin: 0px 100px 0 100px;
     width: 474px;
 }
-.container .title p {
+.title p {
     font-size: 20px; 
     font-family: 'Open Sans', sans-serif;
     color: rgb(0, 0, 0);
@@ -286,7 +280,7 @@ a {
     margin-bottom: 50px;
     margin-top: 10px;
 }
-.container .text p {
+.text p {
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
     color: rgb(134, 135, 139);
@@ -333,9 +327,7 @@ a {
     line-height: 1.194;
     text-align: center;
 }
-.hr {
-    justify-content: center;
-}
+
 .circle {
     justify-content: center;
     align-items: center;
@@ -351,9 +343,8 @@ a {
 }
 .container_box {
     width: 350px;
-    /* height: 200px; */
 }
-.container .title_text, .box_text {
+.title_text, .box_text {
     font-size: 15px;
     font-family: 'Open Sans', sans-serif;
     color: rgb(134, 135, 139);
@@ -382,7 +373,7 @@ a {
     height: 883px;
     background-color: #f5f5f5;
 }
-.pricing > .container {
+.pricing .container {
     padding-top: 100px;
     margin: 0px auto 80px;
 }
@@ -393,19 +384,16 @@ a {
     align-items: flex-end;
     padding: 0 150px 0 150px;
 }
-.wrapper_box .box ul {
-    width: 343px;
-}
-.wrapper_box .box  li {
+
+.wrapper_box li {
     height: 40px;
     text-align: center;
     margin-bottom: 1px;
     padding-top: 10px;
-    box-sizing: border-box;
-
-    
+    box-sizing: border-box; 
+    width: 343px;
 }
-.wrapper_box .box ul .basic {
+.basic {
     font-size: 20px;
     font-family: 'Open Sans', sans-serif;
     color: rgb(255, 255, 255);
@@ -415,7 +403,7 @@ a {
 
 }
 
-.wrapper_box .box  ul .price {
+.box ul .price {
     font-size: 80px;
     font-family: "Raleway";
     color: rgb(255, 255, 255);
@@ -425,7 +413,7 @@ a {
     background-color: #333333;
     height: 100px;
   }
-  .wrapper_box .box  ul .text_comm {
+.text_comm {
         font-size: 14px;
         font-family: 'Open Sans', sans-serif;
         color: rgba(255, 255, 255, 0.502);
@@ -434,7 +422,7 @@ a {
         background-color: #333333;
  }
   
- .wrapper_box .box  ul > .texte_gray {
+.texte_gray {
     font-size: 14px;
     font-family: "OpenSans", sans-serif;
     color: rgb(134, 135, 139);
@@ -443,14 +431,14 @@ a {
     text-align: center;
     background-color: white;
   }
-  .wrapper_box .box ul > .texte_gray:hover{
-      color: white;
-      background-color: #ff8b38;
-      cursor: pointer;
-      transition-duration: 0.2s;
-      transform: scale(1.03);
-      
-  }
+ 
+  .box ul .texte_gray:hover{
+    color: white;
+    background-color: #ff8b38;
+    cursor: pointer;
+    transition-duration: 0.2s;
+    transform: scale(1.03); 
+}
   
 .testimonials .container:first-child {  /* седьмой блок с отзывами*/
     width: 655px;
@@ -460,10 +448,11 @@ a {
     padding: 0 170px 100px 170px;
 }
 
-.testimonials .container .comment {
+.testimonials .comment {
     width: 273px;
 }
-.testimonials .container .comment .photo_fio  {
+
+.testimonials .photo_fio  {
     display: flex;
     flex-direction: row;
 }
@@ -472,7 +461,7 @@ a {
     flex-direction: row;
     justify-content: space-between;
 }
-.container .comment .wrapper_comment{
+.container .wrapper_comment{
     background: no-repeat url(../images/background_comment.png);
     padding: 20px 10px 40px 10px;
     margin-bottom: 5px;
@@ -483,10 +472,10 @@ a {
     font-style: italic;
 }
 
-.container .comment .fio {
+.container .fio {
     margin: 15px;
 }
-.container .comment .fio .name {
+.container .name {
     font-size: 20px;
     /* font-family: "OpenSans", sans-serif; */
     color: rgb(51, 51, 51);
@@ -494,7 +483,7 @@ a {
     line-height: 1.2;
 }
 
-.container .comment .fio .position {
+.container .position {
     font-size: 14px;
     font-family: "OpenSans", sans-serif;
     color: rgb(134, 135, 139);
