--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,27 +9,29 @@
      flex-direction: row;
      background-color: black;
      height: 70px;
-     width: 100%;
+     width: 100vw;
      justify-content: space-between
  }
 
  .navbar_img {
-     width: 79px;
-     height: 27px;
-     padding: 20px 0px 20px 150px
+    padding: 20px 0px 20px 150px
  }
 
  .navbar_title {
      display: flex;
      flex-direction: row;
-     align-self: center
+     align-self: center;
+     justify-content: space-between;
+     width: 445px;
+     padding-right: 150px;
  }
 
  .navbar_title a {
      font-size: 14px;
      color: rgba(255, 255, 255, 0.69);
      line-height: 1.2;
-     text-decoration: none
+     text-decoration: none;
+     padding-right: 10px;
  }
 
  .navbar_title nav>a:link {
@@ -61,8 +63,7 @@
      flex-direction: row;
      justify-content: space-between;
      background: no-repeat url(../images/Header_Panel.png);
-     background-attachment: fixed;
-     background-size: cover;
+        background-size: cover;
      height: 711px;
      padding: 180px 150px 0 150px
  }
@@ -70,6 +71,9 @@
  .header_block {
      height: min-content;
      max-width: 520px
+ }
+ .header .one {
+    min-width: 420px;
  }
 
  .signap {
@@ -197,7 +201,8 @@
  }
 
  .brand_box1 {
-     width: 364px
+     width: 364px;
+     min-width: 271px;
  }
 
  .brand_box1 h2 {
@@ -213,7 +218,8 @@
  }
 
  .brand_box2 {
-     align-self: center
+     align-self: center;
+     width: 50%;
  }
 
  .a,
@@ -227,7 +233,7 @@
      display: flex;
      flex-direction: row;
      justify-content: space-between;
-     width: 635px
+     max-width: 635px;
  }
 
  .social_links_element i {
@@ -596,7 +602,7 @@
     font-size: 14px;
     padding: 10px;
  }
- .comtact__items_comment {
+ .contact__items_comment {
      width: 520px;
      height: 120px;
      outline: none;
@@ -610,3 +616,43 @@
      justify-content: center;
  }
  
+
+.footer .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #000000;
+    height: 100px;
+    justify-content: center;
+   
+}
+ .footer .social_links_element i {
+    display: block;
+    font-size: 23px;
+    font-family: "FontAwesome";
+    color: rgb(204, 204, 204);
+    font-style: normal;
+    line-height: 1.2;
+    text-decoration: none;    
+}
+.footer__icon  .social_links_element{
+     max-width: 320px;
+     margin-bottom: 15px;
+}
+
+.social_links_element i:hover {
+    color: #ff801f;
+    text-decoration: none;
+    transform: scale(1.2);
+    transition: 0.4s;
+    text-decoration: none
+}
+.footer__2015 {
+    color: rgba(255, 255, 255, 0.502); 
+    font-size: 12px; 
+    font-family:OpenSans; 
+    line-height: 1.2;
+}
+
+
+  
