--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -16,7 +16,7 @@ body {
  .button_download,
  .header__block_signap_title,
  .header__block_signap_btn,
- h2 .brand_box_text,
+ h2, .brand_box_text,
  .control,
  p,
  .button_download_features,
@@ -30,8 +30,9 @@ body {
      flex-direction: row;
      background-color: black;
      height: 70px;
-     width: 100vw;
-     justify-content: space-between
+     max-width: 100vw;
+     justify-content: space-between;
+     overflow-x: hidden;
  }
 
  .navbar__img {
@@ -86,7 +87,8 @@ body {
      background: no-repeat url(../images/Header_Panel.png);
     background-size: cover;
      height: 711px;
-     padding: 180px 150px 0 150px
+     padding: 180px 150px 0 150px;
+     overflow-x: hidden;
  }
 
  .header__block {
@@ -218,7 +220,8 @@ body {
      justify-content: space-between;
      height: 105px;
      padding: 18px 167px 20px 150px;
-     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5)
+     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+     overflow-x: hidden;
  }
 
  .brand_box1 {
@@ -229,7 +232,8 @@ body {
  .brand_box1 h2 {
      font-size: 20px;
      color: rgb(51, 51, 51);
-     font-weight: bold
+     font-weight: bold;
+     margin: 0;
  }
 
  .brand_box1 .brand_box_text {
@@ -287,7 +291,8 @@ body {
      background-color: #f5f5f5;
      height: 595px;
      justify-content: center;
-     align-items: center
+     align-items: center;
+     overflow-x: hidden;
  }
 
  .features .first {
@@ -366,7 +371,8 @@ body {
      height: 592px;
      background-color: white;
      justify-content: center;
-     align-items: center
+     align-items: center;
+     overflow-x: hidden;
  }
 
  .container .title {
@@ -424,7 +430,8 @@ body {
  .pricing {
      /* начало контейнера ПРисинн*/
      height: 883px;
-     background-color: #f5f5f5
+     background-color: #f5f5f5;
+     overflow-x: hidden;
  }
 
  .pricing .container {
@@ -499,7 +506,8 @@ body {
  }
 
  .testimonials {
-     padding: 0 170px 100px 170px
+     padding: 0 170px 100px 170px;
+     overflow-x: hidden;
  }
 
  .testimonials .comment {
@@ -549,6 +557,7 @@ body {
      /* седьмой блок с фоновой картинкой и кнопкой скачать*/
      background: url(../images/Custom-Panel.png);
      height: 320px;
+     overflow-x: hidden;
  }
 
  .custom_section .container {
@@ -577,6 +586,7 @@ body {
     padding: 0px 140px 80px 140px;
     align-items: center;
     margin-top: 100px;
+    overflow-x: hidden;
 }
 
  .contact__items {
@@ -613,7 +623,6 @@ body {
      display: flex;
      justify-content: center;
  }
- 
 
 .footer .container {
     display: flex;
@@ -622,6 +631,7 @@ body {
     background-color: #000000;
     height: 100px;
     justify-content: center;
+    overflow-x: hidden;
    
 }
  .footer .social_links_element i {
@@ -650,7 +660,5 @@ body {
     font-size: 12px; 
     font-family:OpenSans; 
     line-height: 1.2;
+    overflow-x: hidden;
 }
-
-
-  
